--- a/Sample.Grains.Interfaces/Sample.Grains.Interfaces.csproj
+++ b/Sample.Grains.Interfaces/Sample.Grains.Interfaces.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>Sample.Grains</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.2" />
+  </ItemGroup>
+
 </Project>
