--- a/Sample.Silo/Sample.Silo.csproj
+++ b/Sample.Silo/Sample.Silo.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="2.3.2" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="2.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Sample.Grains\Sample.Grains.csproj" />
   </ItemGroup>
 
