--- a/Sample.Silo/Sample.Silo.csproj
+++ b/Sample.Silo/Sample.Silo.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="2.3.2" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="2.3.2" />
+    <PackageReference Include="OrleansDashboard" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
