Wired up client and silo

--- a/Sample.Grains.Interfaces/Sample.Grains.Interfaces.csproj
+++ b/Sample.Grains.Interfaces/Sample.Grains.Interfaces.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Sample.Grains</RootNamespace>
   </PropertyGroup>
 
@@ -12,6 +12,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.3.2" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sample.Models\Sample.Models.csproj" />
   </ItemGroup>
 
 </Project>
