--- a/Sample.ServerSide/Sample.ServerSide.csproj
+++ b/Sample.ServerSide/Sample.ServerSide.csproj
@@ -5,4 +5,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.2" />
+  </ItemGroup>
+
 </Project>
