--- a/Sample.ServerSide/Sample.ServerSide.csproj
+++ b/Sample.ServerSide/Sample.ServerSide.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sample.Grains.Interfaces\Sample.Grains.Interfaces.csproj" />
+    <ProjectReference Include="..\Sample.Models\Sample.Models.csproj" />
+  </ItemGroup>
+
 </Project>
