--- a/Sample.Silo/Sample.Silo.csproj
+++ b/Sample.Silo/Sample.Silo.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Orleans.Server" Version="2.3.2" />
     <PackageReference Include="OrleansDashboard" Version="2.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
