--- a/Sample.ServerSide/Sample.ServerSide.csproj
+++ b/Sample.ServerSide/Sample.ServerSide.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.2" />
+    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
