--- a/Sample.ServerSide/Sample.ServerSide.csproj
+++ b/Sample.ServerSide/Sample.ServerSide.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.2" />
-    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.3.2" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.3.3" />
+    <PackageReference Include="Microsoft.Orleans.OrleansProviders" Version="2.3.3" />
   </ItemGroup>
 
   <ItemGroup>
